# immutable-rust

./: Cargo.toml
src/: main.rs
